[project]
name = "cskwork-reddit-mcp"
version = "0.1.0"
description = "Reddit MCP server with proper post flair support, plus a standalone PRAW poster script."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "cskwork" }]
keywords = ["reddit", "mcp", "praw", "claude", "model-context-protocol"]
dependencies = [
    "praw>=7.7,<8",
    "mcp[cli]>=1.2",
]

[project.scripts]
reddit-mcp = "reddit_mcp.server:main"
reddit-post = "reddit_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/cskwork/reddit-mcp"
Issues = "https://github.com/cskwork/reddit-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reddit_mcp"]
